<resources>
    <string name="app_name">GetPet</string>
    <string name="email"> Email: </string>
    <string name="password"> Password </string>
    <string name="loginasguest"> Login as Guest </string>
    <string name="or"> or </string>
    <string name="firstname"> First Name </string>
    <string name="lastname"> Last Name </string>
    <string name="createPassword"> Create Password </string>
    <string name="adoptFoster"> Adopt/Foster</string>
    <string name="findaHome"> Find a Home </string>
    <string name="helpandSupport"> Help and Support </string>
    <string name="interactwithyourvirtuallyadoptedpet"> Interact with your virtually adopted pets </string>
    <string name="storyboard"> Storyboard </string>
    <string name="search"> Search </string>
    <string name="notifications"> Notifications </string>
    <string name="explore"> Explore </string>
    <string name="profile"> Profile </string>
    <string name="filterBy"> Filter By </string>
    <string name="type"> Type: </string>
    <string name="breed"> Breed: </string>
    <string name="age"> Age: </string>
    <string name="adopt"> Adopt </string>
    <string name="walk"> Walk </string>
    <string name="feed">Feed</string>
    <string name="play">Play</string>
    <string name="getpet">GetPet</string>
    <string name="gobacktoprofile">Go back to Profile</string>
    <string name="edit">Edit</string>
    <string name="viewSearchHistory"> View Search History </string>
    <string name="manageStoryboard">Manage Storyboard </string>
    <string name="signout"> Sign Out </string>
    <string name="recent"> Recent </string>
    <string name="trending"> Trending </string>
    <string name="gender">Gender:</string>
    <string name="name">Name:</string>
    <string name="confirmPassword"> Confirm Password</string>
    <string name="editProfile">Edit Profile</string>
    <string name="viewinAR">View in AR</string>
    <string name="adoptMessage">Your request has been sent to the Pet Shelter! You will be contacted shortly.</string>
    <string name="createpetprofile">Create Pet Profile</string>
    <string name="uploadpetpicture">Please upload a picture of your pet</string>
    <string name="whatdoyoucall">What do you call him/her?</string>\
    <string name="next">Next</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="likes">likes</string>
    <string name="postImage">images</string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="petprofile">Pet Profile</string>
    <string name="petage">Age:</string>
    <string name="petdescription">Description:</string>
    <string name="okay">Okay</string>
    <string name="petsowned">Pets Owned: </string>
    <string name="submit">Submit</string>
    <string name="whenwasheborn">When was he/she born?</string>
    <string name="tellusmore">Tell us a little bit  more about him/her?</string>
    <string name="description">Description:</string>
    <string name="post">Post</string>
    <string name="upload">Upload</string>
    <string name="choose">Choose</string>
    <string name="whatbreed">What\'s the Breed?</string>
    <string name="whatsthispost">What\'s this post about?</string>
    <string name="vetclinic">Vetenary Clinics near you</string>
    <string name="other">Other</string>
    <string name="groomingnear">Grooming Near you</string>
    <string name="gallery">gallery</string>
    <string name = "zero"> (0)</string>

</resources>

