<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/storyboard"
        android:title="@string/storyboard"
        android:icon="@drawable/storyboard"
        />

    <item
        android:id="@+id/explore"
        android:title="@string/explore"
        android:icon="@drawable/explore"
        />

    <item
        android:id="@+id/adopt"
        android:title="@string/adopt"
        android:icon="@drawable/adopt"
        />

    <item
        android:id="@+id/notifications"
        android:title="@string/notifications"
        android:icon="@drawable/notifications"
        />

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/profile"
        />
</menu>