<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePetProfile">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="#3498DB"
        app:flow_horizontalBias="0.5"
        app:itemIconSize="40dp"
        app:itemIconTint="@drawable/bottom_navigation_selector"
        app:itemTextColor="@drawable/bottom_navigation_selector"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navbar_menu" />

    <View
        android:id="@+id/textView39"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#3498DB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alike_angular"
        android:text="@string/createpetprofile"
        android:textColor="#FFFFFF"
        android:textSize="45sp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textView41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/uploadpetpicture"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView39" />

    <ImageView
        android:id="@+id/uploadPetImage"
        android:layout_width="131dp"
        android:layout_height="120dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/postImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView41"
        app:srcCompat="@drawable/profilepic3" />


    <TextView
        android:id="@+id/textView42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="43dp"
        android:text="@string/gender"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose" />


    <EditText
        android:id="@+id/petNameIn"
        android:layout_width="290dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/textareaborder"
        android:hint="@string/whatdoyoucall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/typeSpinnerIn" />

    <RadioGroup
        android:id="@+id/radioGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/textView42"
        app:layout_constraintTop_toBottomOf="@+id/choose">

        <RadioButton
            android:id="@+id/Male"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="20dp"
            android:text="@string/male"
            android:textSize="18sp">

        </RadioButton>

        <RadioButton
            android:id="@+id/Female"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/female"
            android:textSize="18sp">

        </RadioButton>

    </RadioGroup>

    <Button
        android:id="@+id/upload"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"

        android:background="@drawable/greenbuttondesign"
        android:text="@string/upload"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/choose"
        app:layout_constraintTop_toBottomOf="@+id/uploadPetImage" />

    <Button
        android:id="@+id/choose"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/greenbuttondesign"
        android:text="@string/choose"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/upload"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uploadPetImage" />

    <EditText
        android:id="@+id/petBreedIn"
        android:layout_width="338dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/textareaborder"
        android:hint="@string/whatbreed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/petNameIn" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/greenbuttondesign"
        android:text="@string/next"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/petBreedIn"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/typeSpinnerIn"
        android:layout_width="338dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/filterdropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGender" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="59dp"
        android:layout_height="49dp"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/typeSpinnerIn"
        app:layout_constraintEnd_toEndOf="@+id/typeSpinnerIn"
        app:layout_constraintTop_toTopOf="@+id/typeSpinnerIn"
        app:srcCompat="@mipmap/baseline_arrow_drop_down_black_24" />


</androidx.constraintlayout.widget.ConstraintLayout>