<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ARView">


    <Button
        android:id="@+id/button4"
        android:layout_width="90dp"
        android:layout_height="41dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="51dp"
        android:background="@drawable/arbuttondesign"
        android:fontFamily="@font/alike_angular"
        android:text="@string/walk"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/downloadButton"/>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/arFragment"
        android:name="com.google.ar.sceneform.ux.ArFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/GetPet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button6"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="180dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/greenbuttondesign"
        android:text="@string/getpet"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/downloadButton"
        android:layout_width="90dp"
        android:layout_height="41dp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="50dp"
        android:layout_toStartOf="@+id/button6"
        android:background="@drawable/arbuttondesign"
        android:fontFamily="@font/alike_angular"
        android:text="@string/feed"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button6" />

    <Button
        android:id="@+id/button6"
        android:layout_width="90dp"
        android:layout_height="41dp"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="50dp"
        android:layout_toStartOf="@+id/button4"
        android:background="@drawable/arbuttondesign"
        android:fontFamily="@font/alike_angular"
        android:text="@string/play"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/gobacktoprofile"
        android:layout_width="186dp"
        android:layout_height="36dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="194dp"
        android:background="@drawable/arbuttondesign"
        android:fontFamily="@font/alike_angular"
        android:text="@string/gobacktoprofile"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</RelativeLayout>