<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePetProfile1">

    <Button
        android:id="@+id/nextButton"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/greenbuttondesign"
        android:text="@string/next"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/bottom_navbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/breedSpinnerIn"
        app:layout_constraintVertical_bias="0.252" />

    <EditText
        android:id="@+id/petNameIn"
        android:layout_width="338dp"
        android:layout_height="50dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/textareaborder"
        android:hint="@string/whatdoyoucall"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView48" />

    <TextView
        android:id="@+id/textView48"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="30dp"
        android:text="@string/gender"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose" />

    <Button
        android:id="@+id/choose"
        android:layout_width="110dp"
        android:layout_height="35dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/greenbuttondesign"
        android:text="@string/choose"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uploadPetImage2" />

    <ImageView
        android:id="@+id/uploadPetImage2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="28dp"
        android:contentDescription="@string/postImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView46" />

    <TextView
        android:id="@+id/textView46"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="25dp"
        android:text="@string/uploadpetpicture"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <View
        android:id="@+id/textView18"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#3498DB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/alike_angular"
        android:text="@string/createpetprofile"
        android:textColor="#FFFFFF"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView18" />

    <RadioGroup
        android:id="@+id/radioGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@+id/textView48"
        app:layout_constraintTop_toBottomOf="@+id/choose">

        <RadioButton
            android:id="@+id/MaleRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/FemaleRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female" />
    </RadioGroup>

    <Spinner
        android:id="@+id/typeSpinnerIn"
        android:layout_width="338dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/filterdropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/petNameIn" />

    <Spinner
        android:id="@+id/breedSpinnerIn"
        android:layout_width="338dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/filterdropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeSpinnerIn" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="#3498DB"
        app:flow_horizontalBias="0.5"
        app:itemIconSize="40dp"
        app:itemIconTint="@drawable/bottom_navigation_selector"
        app:itemTextColor="@drawable/bottom_navigation_selector"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navbar_menu" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="59dp"
        android:layout_height="49dp"
        app:layout_constraintBottom_toBottomOf="@+id/typeSpinnerIn"
        app:layout_constraintEnd_toEndOf="@+id/typeSpinnerIn"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/typeSpinnerIn"
        app:layout_constraintTop_toTopOf="@+id/typeSpinnerIn"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@mipmap/baseline_arrow_drop_down_black_24" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="59dp"
        android:layout_height="49dp"
        app:layout_constraintBottom_toBottomOf="@+id/breedSpinnerIn"
        app:layout_constraintEnd_toEndOf="@+id/breedSpinnerIn"
        app:layout_constraintHorizontal_bias="0.996"
        app:layout_constraintStart_toStartOf="@+id/breedSpinnerIn"
        app:layout_constraintTop_toTopOf="@+id/breedSpinnerIn"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@mipmap/baseline_arrow_drop_down_black_24" />

</androidx.constraintlayout.widget.ConstraintLayout>